# crud-py

./: .gitignore  docker-compose.yml  railway.toml  start.sh
crud-py/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
crud-py/src/domain/: user.py
crud-py/src/infrastructure/: mongodb.py  user_repository_impl.py
crud-py/src/interfaces/api/: user_controller.py
crud-py/src/usecase/: user_interactor.py  user_repository.py
docs-service/: Dockerfile  index.html  nginx.conf
nginx-service/: Dockerfile  nginx.conf
