[project]
name = "crud-service"
version = "0.1.0"
description = "CRUD сервис на FastAPI с чистой архитектурой"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "uvicorn[standard]>=0.30.0",
    "motor>=3.3.0",
    "pymongo>=4.0",
    "email-validator>=2.1.0",
]
